[package]
name = "day_5"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "part1"
path = "src/part1.rs"

[[bin]]
name = "part2"
path = "src/part2.rs"

[[bin]]
name = "part2_chatGPT"
path = "src/part2_chatGPT.rs"

[[bin]]
name = "part2_multithread"
path = "src/part2_multithread.rs"

[dependencies]
futures = "0.3.29"
rayon = "1.8.0"
tokio = { version = "1.34.0", features = ["full"] }
